methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:-9: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugTracking of type ()Boolean
and  method isFacingTrail in class SlugTracking of type ()Boolean
match argument types () and expected result type Boolean
			if (isFacingTrail()) {
                            ^SlugTracking:6: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugTracking of type ()Boolean
and  method isFacingTrail in class SlugTracking of type ()Boolean
match argument types () and expected result type Boolean
      if(isFacingTrail())
         ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    while(!estSurBiscuit()){
    ^SlugTracking:17: error: value update is not a member of java.awt.Color
  if(getCouleurSol()=Color.green){
     ^SlugTracking:15: error: method isFacingTrail is defined twice
  conflicting symbols both originated in file 'plm.runtime1.SlugTracking'
def isFacingTrail():Boolean = {
    ^